crates/cadenza-compiler/test-data/semantics/compound-types-error-heterogeneous-list.expected
error: type mismatch in list
 --> test.cdz:1:4
  |
1 | [1, "hello", true]
  |     ^^^^^^^ expected Integer, found String
  |
  = note: all list elements must have the same type
  = note: first element has type Integer